--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -4,6 +4,9 @@
 </head>
 
 <body>
+	<header>
+		{% include 'templates/navbar_admin.html' %}
+	</header>
 	<div class="parent">
 		<div class="div1"> 
 			<div class="div3"> 
