--- a/server/src/pages/file_upload.html
+++ b/server/src/pages/file_upload.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+	<header>
+		{% include 'templates/navbar_admin.html' %}
+	</header>
+
 	<!-- This is the file upload page. -->
 
 	<!-- The "file upload" button and corresponding functionality -->
