--- a/server/src/pages/home.html
+++ b/server/src/pages/home.html
@@ -6,13 +6,7 @@
 
 <body>
 	<header>
-		<nav>
-		    <ul>
-		    	<li><a href="/login">Login</a></li>
-		    	<li><a href="/signup">Sign Up</a></li>
-		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>		     	
-			</ul>
-		</nav>
+		{% include 'templates/navbar_guest.html' %}
 		<section class="header-content">
 		    <h1>Greenhouse Accelerator <br> Knowledge Hub</h1>
 		    <p> This resource provides personalized information on sustainable<br>
