--- a/server/src/pages/user_pages/reset_password_1.html
+++ b/server/src/pages/user_pages/reset_password_1.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 <body>
+	<header>
+		{% include 'templates/navbar_guest.html' %}
+	</header>
 	<div class="centerbox">
 		<h1>Temporary Password:</h1>
 	<form method="POST" action="/reset_password">
