--- a/server/src/pages/user_homepage.html
+++ b/server/src/pages/user_homepage.html
@@ -6,13 +6,7 @@
 
 <body>
 	<header>
-		<nav>
-		    <ul>
-		    	<li><a href="/logout">Logout</a></li>
-		    	<li><a href="/profile">Profile</a></li>
-		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>	     	
-			</ul>
-		</nav>
+		{% include 'templates/navbar_user.html' %}
 		<section class="header-content">
 		    <h1>Welcome, {{ first_name }}</h1>
 		    <p> Click "Begin Story" to start on your journey <br>
