A few changes to the front-end, including updating the preview history button to be more discoverable

--- a/server/src/pages/user_pages/favorites.html
+++ b/server/src/pages/user_pages/favorites.html
@@ -17,7 +17,7 @@
 			<!-- Dictionary variable -->
 			{% for element in favorites %}
 			<div class="content">
-			<a href="/story/{{ element[1] }}"><p>{{ element[0] }}</p></a>
+			<a href="/story/{{ element[1] }}" target="_blank"><p>{{ element[0] }}</p></a>
 			</div>
 			{% endfor %}
 		</div>
