--- a/server/src/pages/story_page.html
+++ b/server/src/pages/story_page.html
@@ -19,7 +19,10 @@
 				<i class="far fa-heart" id="favorite"></i>
 			{% endif %}
 		{% endif %}
-		<p class="storytext">{{ page['page_body_text'] | safe }}</p>
+
+		<section class="header-content">
+			<p class="storytext">{{ page['page_body_text'] | safe }}</p>
+		</section>
 
 		{% for child in page['page_children'] %}
 			<p class="storytext">
