--- a/server/src/pages/user_pages/profile.html
+++ b/server/src/pages/user_pages/profile.html
@@ -15,8 +15,8 @@
 		    <button onclick="window.location.href='/history';">History</button>
 		    
 		    <!-- Need to add functionality to the story buttons -->
-		    <button onclick="window.location.href='#';">Resume Story</button>
-		    <button onclick="window.location.href='#';">New Story</button>
+		    <!-- <button onclick="window.location.href='#';">Resume Story</button>
+		    <button onclick="window.location.href='#';">New Story</button> -->
 		</section>
 	</header>
 </body>
