--- a/server/src/pages/user_pages/favorites.html
+++ b/server/src/pages/user_pages/favorites.html
@@ -17,7 +17,12 @@
 			<!-- Dictionary variable -->
 			{% for element in favorites %}
 			<div class="content">
-			<a href="/story/{{ element[1] }}" target="_blank"><p>{{ element[0] }}</p></a>
+				<form method="POST" class="hidden-form" action="/story/{{ element[1] }}">
+					<input style="display: none" name="prev_page_id" type="text" value="">
+					<input style="display: none" name="history_id" type="number" value="{{ element[2] }}">
+					<input style="display: none" name="forward" type="text" value="True">
+					<input type="submit" value="{{ element[0] }}">
+				</form>
 			</div>
 			{% endfor %}
 		</div>
