Added preliminary wizard

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -37,13 +37,7 @@
 	</header>
 	<div class="parent2">
 		<div class="div5" id="storage">
-			<!-- <button id="2000" class="storybox">Story 1</button> -->
 			<button id="+" class="add_storybox">+</button>
-			<!-- <button id="2000" class="storybox">Story 1</button>
-			<button id="s02" class="storybox" onclick="calledOnClick(this.id)">Story 2</button>
-			<button id="s03" class="storybox" onclick="calledOnClick(this.id)">Story 3</button>
-			<button id="s04" class="storybox" onclick="calledOnClick(this.id)">Story 4</button>
-			<button id="s+" class="storybox" onclick="calledOnClick(this.id)">+</button> -->
 		</div>
 		<div class="div6" id="other-storage"> 
 			<p id="metadata">*THIS IS METADATA*</p>
@@ -54,8 +48,31 @@
 				<h1>Page List</h1>
 			</div>
 			
+
 			<div id="page-pane">
-				<p id="page-pane-child">This is text</p>
+				<h4 style="color: white"> Parent Nodes </h4>
+				<div id="parent-nodes">
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+				</div>
+				<h4 style="color: white"> Body Page </h4>
+				<div id="page-body">
+					<p id="page-pane-child">This is text</p>
+				</div>
+				<h4 style="color: white"> Child Nodes </h4>
+				<div id="child-nodes">
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+					<button> Test Button </button>
+				</div>
 			</div>
 
 			<div class="div8" style="width: 15%">
@@ -69,5 +86,13 @@
 		<h1> Select a Story to Open</h1> 
 	</div>
 
-	
+	<div class="popup" id="editor_wizard">
+		<span class="close">&times;</span>
+		<div>
+			<form>
+
+			</form>
+		</div>
+	</div>
+
 </body>
