Added titles to pages and removed very old sample page from the original Flask test

--- a/server/src/pages/error_pages/500.html
+++ b/server/src/pages/error_pages/500.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<title>Internal Error | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 
