--- a/server/src/pages/story_page.html
+++ b/server/src/pages/story_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>{{ page['page_name'] }}</title>
+		<title>{{ page['page_name'] }} | GA Knowledge Hub</title>
 
 		<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}" />
 		<link rel="stylesheet" href="{{url_for('static', filename='vendor/fontawesome/css/all.min.css')}}" />
