--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<title>Editor | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 
