--- a/server/src/pages/user_pages/favorites.html
+++ b/server/src/pages/user_pages/favorites.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <head>
+	<title>Favorites | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 
