--- a/server/src/pages/user_pages/history.html
+++ b/server/src/pages/user_pages/history.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <head>
-    <title> History Test Page </title>
+    <title>History | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='vendor/fontawesome/css/all.min.css') }}">
 </head>
