--- a/server/src/pages/user_pages/signup.html
+++ b/server/src/pages/user_pages/signup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Signup</title>
+	<title>Signup | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 <body>
