--- a/server/src/pages/admin_pages/profile.html
+++ b/server/src/pages/admin_pages/profile.html
@@ -8,7 +8,7 @@
 	<header>
 		{% include 'templates/navbar_admin.html' %}
 		<section class="header-content">
-		    <h1>Profile Page</h1>
+		    <h1>Profile</h1>
 		    <p> View and edit your profile here </p>
 		    <button onclick="window.location.href='/profile/edit';">Edit Profile</button>
 		</section>
