--- a/server/src/pages/user_pages/profile.html
+++ b/server/src/pages/user_pages/profile.html
@@ -9,7 +9,7 @@
 	<header>
 		{% include 'templates/navbar_user.html' %}
 		<section class="header-content">
-		    <h1>Profile Page</h1>
+		    <h1>Profile</h1>
 		    <p> View and edit your profile here </p>
 		    <button onclick="window.location.href='/profile/edit';">Edit Profile</button>
 		    <button onclick="window.location.href='/favorites';">Favorites</button>
