--- a/server/src/pages/user_pages/login.html
+++ b/server/src/pages/user_pages/login.html
@@ -12,9 +12,9 @@
 	<div class="centerbox">
 		<h1>Login:</h1>
 	<form method="POST" action="/login">
-		<input type="email" name="email" placeholder="Email" autocomplete="email">
+		<input type="email" name="email" placeholder="Email" autocomplete="email" required>
 		<br>
-		<input type="password" name="password" placeholder="Password" autocomplete="current-password">
+		<input type="password" name="password" placeholder="Password" autocomplete="current-password" required>
 		<br>
 		<input type="submit" value="Login">
 		<br>
