--- a/server/src/pages/user_pages/reset_password_2.html
+++ b/server/src/pages/user_pages/reset_password_2.html
@@ -14,14 +14,15 @@
 	<form method="POST" action="/reset_password">
 		<p class="smalltext"></p>
 		<input type="text" name="email" style="display:none;" value="{{ email }}">
-		<input type="password" name="password" placeholder="Password" autocomplete="new-password">
+		<input type="password" name="password" placeholder="Password" autocomplete="new-password" required>
 		<br>
-		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password">
+		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password" required>
 		<br>
 		<input type="submit" value="Reset">
 	</form>
 	</div>
 
-
+	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="{{url_for('static', filename='scripts/confirm_password.js')}}"></script>
 </body>
 </html>
