--- a/server/src/pages/user_pages/forgot_password.html
+++ b/server/src/pages/user_pages/forgot_password.html
@@ -12,7 +12,7 @@
 	<div class="centerbox">
 		<h1>Forgot Password:</h1>
 	<form method="POST" action="/forgot_password">
-		<input type="email" name="email" placeholder="Email" autocomplete="email">
+		<input type="email" name="email" placeholder="Email" autocomplete="email" required>
 		<br>
 		<input type="submit" value="Submit">
 		<br>
