--- a/server/src/pages/user_pages/signup.html
+++ b/server/src/pages/user_pages/signup.html
@@ -12,14 +12,14 @@
 	<div class="centerbox">
 	<h1>Sign Up:</h1>
 	<form method="POST" action="/signup">
-		<input type="text" id="firstName" name="first-name" placeholder="First Name" autocomplete="given-name">
-		<input type="text" id="lastName" name="last-name" placeholder="Last Name" autocomplete="family-name">
+		<input type="text" id="firstName" name="first-name" placeholder="First Name" autocomplete="given-name" required>
+		<input type="text" id="lastName" name="last-name" placeholder="Last Name" autocomplete="family-name" required>
 		<br>
-		<input type="text" name="email" placeholder="Email" autocomplete="email" autocomplete="email">
+		<input type="email" name="email" placeholder="Email" autocomplete="email" autocomplete="email" required>
 		<br>
-		<input type="password" name="password" placeholder="Password" autocomplete="new-password">
+		<input type="password" name="password" placeholder="Password" autocomplete="new-password" required>
 		<br>
-		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password">
+		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password" required>
 		<br>
 		<input type="submit" value="Sign Up">
 		<br>
@@ -28,6 +28,7 @@
 	</form>
 	</div>
 
-
+	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="{{url_for('static', filename='scripts/confirm_password.js')}}"></script>
 </body>
 </html>
