Flushed editor controller

--- a/scratch/quill_sandbox/quill_index.html
+++ b/scratch/quill_sandbox/quill_index.html
@@ -26,6 +26,7 @@
 
   function read_quill() {
         var q_stuff = quill.root.innerHTML;
+        console.log(q_stuff);
         var results = document.getElementById('results');
         results.innerHTML = q_stuff;
   }
