--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,10 +2,11 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
+	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
+	<script src="https://cdn.quilljs.com/1.3.6/quill.js" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/editor_controller.js')}}" defer></script>
-
 <!-- 	<script>
 		function calledOnClick(id) {
 			var rand = Math.floor((Math.random() * 12) + 1);
@@ -52,9 +53,7 @@
 			<div id="page-pane">
 				<h4 style="color: white"> Parent Nodes </h4>
 				<div id="parent-nodes">
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
+
 				</div>
 				<h4 style="color: white"> Body Page </h4>
 				<div id="page-body">
@@ -62,16 +61,7 @@
 				</div>
 				<h4 style="color: white"> Child Nodes </h4>
 				<div id="child-nodes">
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
-					<button> Test Button </button>
+					
 				</div>
 			</div>
 
@@ -86,13 +76,20 @@
 		<h1> Select a Story to Open</h1> 
 	</div>
 
-	<div class="popup" id="editor_wizard">
+	<div class="popup" id="editor_wizard" style='display: none'>
 		<span class="close">&times;</span>
-		<div>
-			<form>
+		<div id='wizard_header'>
+			<h1 id='wizard_title'> Operation Title </h1>
+			<h4 id='wizard_instruction'> Instructions </h4>
+		</div>
+
+
+		<div id='form_container'>
+			<form id='wizard_form'>
 
 			</form>
 		</div>
+		<button class="submit_wizard"> Submit Button </button>
 	</div>
 
 </body>
