--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -2,6 +2,9 @@
 <head>
 	<title>Editor | GA Knowledge Hub</title>
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
+	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
+	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
+	<script src="{{url_for('static', filename='scripts/editor/editor_loader.js')}}" defer></script>
 </head>
 
 <body>
@@ -12,21 +15,15 @@
 		<div class="div1"> 
 			<div class="div3"> 
 				<p class="storytext", style="margin: 0px;">Live Story</p>
-				<button>*Live Story Name*</button>
 			</div>
-			<div class="div4"> 
+			<div id="test" class="div4"> 
 				<p class="storytext", style="margin: 0px;">Saved Stories</p>
-				<button>Story 1</button>
-				<button>Story 2</button>
-				<button>Story 3</button>
-				<button>Story 4</button>
-				<button>Story 5</button>
 			</div>
 		</div>
 		<div class="div2"> 
 			<button onclick="window.location.href='/openeditor';">Open Story</button>
 			<br>
-			<button>New Story</button>
+			<button onclick="window.location.href='/openeditor';">New Story</button>
 		</div>
 	</div>
 </body>
