--- a/server/src/pages/user_pages/edit_profile.html
+++ b/server/src/pages/user_pages/edit_profile.html
@@ -20,6 +20,7 @@
 				<br>
 				<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password">
 				<br>
+				<a href="/profile"><button>Cancel</button></a>
 				<input type="submit" value="Update">
 		    </form>
 		</section>
