--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -42,6 +42,7 @@
 		</div>
 		<div class="div6" id="other-storage"> 
 			<p id="metadata">*THIS IS METADATA*</p>
+			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button> <br>	
 		</div>
 
 		<div id="page-list-parent">
