Fixed styling on history preview page

--- a/server/src/pages/story_page.html
+++ b/server/src/pages/story_page.html
@@ -36,7 +36,11 @@
 			{% endif %}
 		{% endif %}
 
+		{% if preview %}
+		<section>
+		{% else %}
 		<section class="story-content">
+		{% endif %}
 			<p class="storytext">{{ page['page_body_text'] | safe }}</p>
 		</section>
 
