--- a/static/scripts/MapTesting.html
+++ b/static/scripts/MapTesting.html
@@ -5,21 +5,13 @@
 <body>
     <div>
         <button id="load_map_button" onclick="load_map()">load map</button>
-        <!-- <button id="add_line_button" onclick="add_line()">add dang line</button> -->
     </div>
-    <!-- <div id="line_div">
-        <svg id="line_haver" height=1000 width=1000>
-            <line style="stroke:rgb(255,0,0);stroke-width:2" x1="1000" x2="0" y1="0" y2="1000"></line>
-            <line style="stroke:rgb(255,0,0);stroke-width:2" x1="0" x2="1000" y1="0" y2="1000"></line>
-        </svg>
-    </div> -->
-    <div id="crop_frame">
-        <div id="map_canvas">
-
-        </div>
+    <div id="map_frame">
+        <div id="map_canvas"></div>
     </div>
 
     <script src="editor/Editor.js"></script>
     <script src="editor/story_map.js"></script>
+    <script src="editor/drag_element.js"></script>
 
 </body>
