Added global editor buttons

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="div6" id="other-storage"> 
 			<p id="metadata">*THIS IS METADATA*</p>
-			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button> <br>	
+			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button>
 		</div>
 
 		<div id="page-list-parent">
@@ -52,7 +52,7 @@
 			
 
 			<div id="page-pane">
-				<h4 style="color: white"> Parent Nodes </h4>
+				<h4 style="color: white"> Parent Pages </h4>
 				<div id="parent-nodes">
 
 				</div>
@@ -60,7 +60,7 @@
 				<div id="page-body">
 					<p id="page-pane-child">This is text</p>
 				</div>
-				<h4 style="color: white"> Child Nodes </h4>
+				<h4 style="color: white"> Child Pages </h4>
 				<div id="child-nodes">
 					
 				</div>
