Missed story->engine in one spot

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -74,7 +74,7 @@
 
 	<div class="popup" id="popup-box">
 		<span class="close">&times;</span>
-		<h1> Select a Story to Open</h1> 
+		<h1> Select an Engine to Open</h1> 
 	</div>
 
 	<div class="popup" id="editor_wizard" style='display: none'>
