--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -14,16 +14,16 @@
 	<div class="parent">
 		<div class="div1"> 
 			<div class="div3"> 
-				<p class="storytext", style="margin: 0px;">Live Story</p>
+				<p class="storytext", style="margin: 0px;">Live Engine</p>
 			</div>
 			<div id="test" class="div4"> 
-				<p class="storytext", style="margin: 0px;">Saved Stories</p>
+				<p class="storytext", style="margin: 0px;">Saved Engine</p>
 			</div>
 		</div>
 		<div class="div2"> 
-			<button onclick="window.location.href='/openeditor';">Open Story</button>
+			<button onclick="window.location.href='/openeditor';">Open Engine</button>
 			<br>
-			<button onclick="window.location.href='/openeditor';">New Story</button>
+			<button onclick="window.location.href='/openeditor';">New Engine</button>
 		</div>
 	</div>
 </body>
