--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -17,7 +17,7 @@
 				<p class="storytext", style="margin: 0px;">Live Engine</p>
 			</div>
 			<div id="test" class="div4"> 
-				<p class="storytext", style="margin: 0px;">Saved Engine</p>
+				<p class="storytext", style="margin: 0px;">Saved Engines</p>
 			</div>
 		</div>
 		<div class="div2"> 
