--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,34 +2,13 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}"
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
+	<script src="{{url_for('static', filename='scripts/editor/story_map.js')}}" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/editor_controller.js')}}" defer></script>
-<!-- 	<script>
-		function calledOnClick(id) {
-			var rand = Math.floor((Math.random() * 12) + 1);
-			//Set metadata
-		 	var button = document.getElementById(id)
-		 	var text = button.innerHTML + " Metadata: ";
-		 	text = text + "id=" + button.id + ", root=&ltroot&gt, name=&ltname&gt, #pages=" + rand.toString();
-		 	document.getElementById("metadata").innerHTML = text;
-		 	//Set page list
-		 	var pagelist = document.getElementById("page-list");
-		 	while (pagelist.firstChild) {
-		 		pagelist.removeChild(pagelist.firstChild);
-		 	}
-		 	var header = document.createElement("h1");
-		 	header.innerHTML = "Page List";
-		 	pagelist.appendChild(header);
-		 	for (var i=1; i<=rand; i++) {
-		 		var b = document.createElement("button");
-		 		b.innerHTML = "Page " + i.toString();
-		 		pagelist.appendChild(b);
-		 	}
-		}
-	</script> -->
 </head>
 
 <body>
@@ -48,6 +27,7 @@
 		<div id="page-list-parent">
 			<div class="div7" id="page-list">
 				<h1>Page List</h1>
+				<button id='view_storymap'>View Story Map</button>
 			</div>
 			
 
@@ -64,6 +44,10 @@
 				<div id="child-nodes">
 					
 				</div>
+			</div>
+
+			<div id="map_frame" style='display:none'>
+				<div id="map_canvas"></div>
 			</div>
 
 			<div class="div8" style="width: 15%">
