Improved live engine update

--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -12,15 +12,15 @@
 		{% include 'templates/navbar_admin.html' %}
 	</header>
 	<div class="parent">
-		<div class="div1"> 
-			<div class="div3"> 
+		<div class="engine_info"> 
+			<div class="live_engine_display"> 
 				<p class="storytext", style="margin: 0px;">Live Engine</p>
 			</div>
-			<div id="test" class="div4"> 
+			<div id="test" class="saved_engines"> 
 				<p class="storytext", style="margin: 0px;">Saved Engines</p>
 			</div>
 		</div>
-		<div class="div2"> 
+		<div class="open_or_new"> 
 			<button onclick="window.location.href='/openeditor';">Open Engine</button>
 			<br>
 			<button onclick="window.location.href='/openeditor';">New Engine</button>
