Add functionality to open files from File Explorer + other minor changes

--- a/server/src/pages/admin_pages/file_upload.html
+++ b/server/src/pages/admin_pages/file_upload.html
@@ -15,10 +15,10 @@
 
 	<!-- The "file upload" button and corresponding functionality -->
 	<div class="centerbox">
-	<form enctype="multipart/form-data" method="post">
+	<form enctype="multipart/form-data" method="POST">
 		<label for="selectfile">Select File:</label>
 		<br>
-		<input type="file" id ="selectfile" name="files" value="Select File" multiple>
+		<input type="file" id ="selectfile" name="file" value="Select File" multiple>
 		<br>
 		<input type="submit" id="submitfile" value="Upload File">
 	</form>
