Added functionality for displaying site URL for each file

--- a/server/src/pages/admin_pages/file_upload.html
+++ b/server/src/pages/admin_pages/file_upload.html
@@ -9,6 +9,11 @@
 
 	<header>
 		{% include 'templates/navbar_admin.html' %}
+		<section class="header-content">
+		    <h1>File Upload</h1>
+		    <p> Upload files here </p>
+		    <button onclick="window.location.href='/media';">Return to Media Manager</button>
+		</section>
 	</header>
 
 	<!-- This is the file upload page. -->
