--- a/server/src/pages/admin_pages/files.html
+++ b/server/src/pages/admin_pages/files.html
@@ -19,6 +19,7 @@
 						<input style="display: none" name="file" type="text" value="{{ file }}">
 						<input type="submit" value="{{ file }}">
 					</form>
+					<p> URL: {{ url_root }}file/{{ file }} </p>
 				</div>
 			{% endfor %}
 		</div>
