Added error message to forgot password page when there is no account associated with the provided email

--- a/server/src/pages/user_pages/forgot_password.html
+++ b/server/src/pages/user_pages/forgot_password.html
@@ -11,14 +11,17 @@
 	</header>
 	<div class="centerbox">
 		<h1>Forgot Password:</h1>
-	<form method="POST" action="/forgot_password">
-		<input type="email" name="email" placeholder="Email" autocomplete="email" required>
-		<br>
-		<input type="submit" value="Submit">
-		<br>
-		<p class="smalltext">Don't have an account?</p>
-		<a class="smalltext" href="/signup">Sign up here.</a>
-	</form>
+		{% if no_account %}
+			<p class="error-message">There is no account associated with the email you provided.</p>
+		{% endif %}
+		<form method="POST" action="/forgot_password">
+			<input type="email" name="email" placeholder="Email" autocomplete="email" required>
+			<br>
+			<input type="submit" value="Submit">
+			<br>
+			<p class="smalltext">Don't have an account?</p>
+			<a class="smalltext" href="/signup">Sign up here.</a>
+		</form>
 	</div>
 
 
