--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,7 +2,7 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}"
+	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}">
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js" defer></script>
