Replace Quill with TinyMCE

--- a/static/scripts/MapTesting.html
+++ b/static/scripts/MapTesting.html
@@ -6,8 +6,10 @@
     <div>
         <button id="load_map_button" onclick="load_map()">load map</button>
     </div>
-    <div id="map_frame">
-        <div id="map_canvas"></div>
+    <div>
+        <div id="map_frame">
+            <div id="map_canvas"></div>
+        </div>
     </div>
 
     <script src="editor/Editor.js"></script>
