--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -4,9 +4,11 @@
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}">
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
+	<!-- <script src="{{url_for('static', filename='scripts/editor/drag_element.js')}}"></script> -->
 	<script src="{{url_for('static', filename='scripts/editor/story_map.js')}}" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/editor_controller.js')}}" defer></script>
 </head>
@@ -46,10 +48,6 @@
 				</div>
 			</div>
 			
-			<div id="map_frame" style='display:none'>
-				<div id="map_canvas"></div>
-			</div>
-
 			<div class="div8" style="width: 15%">
 			</div>
 		</div>
@@ -76,5 +74,23 @@
 		</div>
 		<button class="submit_wizard"> Submit Button </button>
 	</div>
+
+	
+	<!-- <div id="map_frame" style='display:none'>
+		<div id="map_canvas"></div>
+	</div> -->
+<!-- 
+	<iframe src="{{url_for('static', filename='scripts/EngineMap.html')}}" title="Engine Map" id="map_iframe">
+
+	</iframe> -->
+<!-- 
+	<div id="map_iframe">
+		<div id="map_frame">
+			<div id="map_canvas">
+
+			</div>
+		</div>
+	</div> -->
+
 
 </body>
