--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,13 +2,13 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}">
+	<!-- <link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}"> -->
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
-	<!-- <script src="{{url_for('static', filename='scripts/editor/drag_element.js')}}"></script> -->
+	<script src="{{url_for('static', filename='scripts/editor/drag_element.js')}}" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/story_map.js')}}" defer></script>
 	<script src="{{url_for('static', filename='scripts/editor/editor_controller.js')}}" defer></script>
 </head>
@@ -17,6 +17,13 @@
 	<header>
 		<!-- {% include 'templates/navbar_admin.html' %} -->
 	</header>
+
+	<div id="map_frame">
+		<div id="map_canvas">
+			<h1> Story Map </h1>
+		</div>
+	</div>
+
 	<div class="parent2">
 		<div class="div5" id="storage">
 			<button id="+" class="add_storybox">+</button>
@@ -83,14 +90,6 @@
 	<iframe src="{{url_for('static', filename='scripts/EngineMap.html')}}" title="Engine Map" id="map_iframe">
 
 	</iframe> -->
-<!-- 
-	<div id="map_iframe">
-		<div id="map_frame">
-			<div id="map_canvas">
-
-			</div>
-		</div>
-	</div> -->
 
 
 </body>
