--- a/scratch/tinymce_sandbox/tinymce_index.html
+++ b/scratch/tinymce_sandbox/tinymce_index.html
@@ -5,6 +5,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="tiny_mce_style.css">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
