--- a/server/src/pages/user_pages/reset_password_2.html
+++ b/server/src/pages/user_pages/reset_password_2.html
@@ -14,7 +14,7 @@
 	<form method="POST" action="/reset_password">
 		<p class="smalltext"></p>
 		<input type="text" name="email" style="display:none;" value="{{ email }}">
-		<input type="password" name="password" placeholder="Password" autocomplete="new-password" required>
+		<input type="password" name="password" placeholder="Password" autocomplete="new-password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
 		<br>
 		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password" required>
 		<br>
@@ -23,6 +23,7 @@
 	</div>
 
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="{{url_for('static', filename='scripts/confirm_password.js')}}"></script>
 </body>
 </html>
