--- a/server/src/pages/user_pages/signup.html
+++ b/server/src/pages/user_pages/signup.html
@@ -20,7 +20,7 @@
 			<br>
 			<input type="email" name="email" placeholder="Email" autocomplete="email" autocomplete="email" required>
 			<br>
-			<input type="password" name="password" placeholder="Password" autocomplete="new-password" required>
+			<input type="password" name="password" placeholder="Password" autocomplete="new-password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
 			<br>
 			<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password" required>
 			<br>
@@ -32,6 +32,7 @@
 	</div>
 
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="{{url_for('static', filename='scripts/confirm_password.js')}}"></script>
 </body>
 </html>
