Update Menubar in MCE Editor

--- a/scratch/tinymce_sandbox/tinymce_index.html
+++ b/scratch/tinymce_sandbox/tinymce_index.html
@@ -17,7 +17,7 @@
  	    selector: 'textarea',  // change this value according to your HTML
  	    content_css: 'default',
   		// plugins: 'advlist link image lists code',
-  		// a_plugin_option: true,
+  		a_plugin_option: true,
   		a_configuration_option: 400,
   		height: 450,
   		// plugins: 'code'
