Fixed wizard spacing

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -79,7 +79,7 @@
 
 			</form>
 		</div>
-		<button class="submit_wizard"> Submit Button </button>
+		<button class="submit_wizard"> Confirm </button>
 	</div>
 
 	
