Fixed a bug where reset passwords were not always carried over because the way the application accessed any user and current_user were different

--- a/server/src/pages/admin_pages/edit_profile.html
+++ b/server/src/pages/admin_pages/edit_profile.html
@@ -27,5 +27,6 @@
 	</header>
 
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="{{url_for('static', filename='scripts/confirm_password.js')}}"></script>
 </body>
