--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -29,7 +29,7 @@
 			<button id="+" class="add_storybox">+</button>
 		</div>
 		<div class="div6" id="other-storage"> 
-			<p id="metadata">*THIS IS METADATA*</p>
+			<div id="metadata">*THIS IS METADATA*</div>
 			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button>
 		</div>
 
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 			
-			<div class="div8" style="width: 15%">
+			<div class="div8">
 			</div>
 		</div>
 	</div>
