styling tweaks. Added export, import button

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -30,7 +30,8 @@
 		</div>
 		<div class="div6" id="other-storage"> 
 			<div id="metadata">*THIS IS METADATA*</div>
-			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button>
+			<button id="save_story" class="save_export">Save</button>
+			<button id="export_data" class="save_export">Export</button>
 		</div>
 
 		<div id="page-list-parent">
