--- a/server/src/pages/editor.html
+++ b/server/src/pages/editor.html
@@ -22,8 +22,8 @@
 		</div>
 		<div class="open_or_new"> 
 			<button onclick="window.location.href='/openeditor';">Open Engine</button>
-			<br>
-			<button onclick="window.location.href='/openeditor';">New Engine</button>
+			<!-- <br> -->
+			<!-- <button onclick="window.location.href='/openeditor';">New Engine</button> -->
 		</div>
 	</div>
 </body>
