Fixed clearing issue with child link text

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -47,7 +47,7 @@
 				</div>
 				<h4 style="color: white"> Body Page </h4>
 				<div id="page-body">
-					<p id="page-pane-child">This is text</p>
+					<p id="page-pane-child"></p>
 				</div>
 				<h4 style="color: white"> Child Pages </h4>
 				<div id="child-nodes">
