--- a/server/src/pages/story_page.html
+++ b/server/src/pages/story_page.html
@@ -24,7 +24,7 @@
 							<input style="display: none" name="prev_page_id" type="text" value="{{ page['page_id'] }}">
 							<input style="display: none" name="history_id" type="number" value="{{ history }}">
 							<input style="display: none" name="forward" type="text" value="False">
-							<input type="submit" value="Back">
+							<input type="submit" value="Back to {{ back_name }}">
 						</form>
 					{% endif %}
 					{% if favorited %}
