Added Navbar to Editor

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-	<header>
-		<!-- {% include 'templates/navbar_admin.html' %} -->
+	<header style="padding-bottom-bottom: 100px;">
+		{% include 'templates/navbar_admin.html' %}
 	</header>
-
+	<div class="spacer"> </div> 
 	<div id="map_frame">
 		<div id="map_canvas">
 			<h1> Story Map </h1>
@@ -29,7 +29,7 @@
 			<button id="+" class="add_storybox">+</button>
 		</div>
 		<div class="div6" id="other-storage"> 
-			<div id="metadata">*THIS IS METADATA*</div>
+			<div id="metadata">Engine Details: </div>
 			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button>
 		</div>
 
@@ -47,7 +47,7 @@
 				</div>
 				<h4 style="color: white"> Body Page </h4>
 				<div id="page-body">
-					<p id="page-pane-child">This is text</p>
+					<p id="page-pane-child"></p>
 				</div>
 				<h4 style="color: white"> Child Pages </h4>
 				<div id="child-nodes">
