editor styling tweaks

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-	<header style="padding-bottom-bottom: 100px;">
+	<header >
 		{% include 'templates/navbar_admin.html' %}
 	</header>
-	<div class="spacer"> </div>
+	<div class="spacer"></div>
 	<div id="map_frame">
 		<div id="map_canvas">
 			<h1> Story Map </h1>
