--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,7 +2,7 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
-	<!-- <link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}"> -->
+	<link rel="stylesheet" href="{{url_for('static', filename='scripts/editor/map_style.css')}}">
 	<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
@@ -18,11 +18,9 @@
 		{% include 'templates/navbar_admin.html' %}
 	</header>
 	<div class="spacer"></div>
-	<div id="map_frame">
-		<div id="map_canvas">
-			<h1> Story Map </h1>
-		</div>
-	</div>
+	<!-- <div id="map_parent"> -->
+	
+
 
 	<div class="parent2">
 		<div class="div5" id="storage">
@@ -32,6 +30,12 @@
 			<div id="metadata">Engine Details:</div>
 			<button id="save_story" class="save_export">Save</button>
 			<button id="export_data" class="save_export">Export</button>
+		</div>
+
+		<div id="map_frame">
+			<div id="map_canvas">
+				<!-- <h1> Story Map </h1> -->
+			</div>
 		</div>
 
 		<div id="page-list-parent">
