--- a/server/src/pages/admin_pages/media_manager.html
+++ b/server/src/pages/admin_pages/media_manager.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Media Manager | GA Knowledge Hub</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='vendor/fontawesome/css/all.min.css') }}">
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
 </head>
 
@@ -10,8 +11,26 @@
 	</header>
 	<section class="header-content">
 		<h1>Media Manager</h1>
-		<p> View and upload files here </p>
-		<button onclick="window.location.href='/files';">File Explorer</button>
+		<p> View, download, and delete files here </p>
 		<button onclick="window.location.href='/upload';">File Upload</button>
 	</section>
+	<div>
+		{% for file in files %}
+			<div class="content" id="{{ file[0] }}">
+				<form method="POST" class="hidden-form" action="/file/{{ file[0] }}" target="_blank">
+					<input style="display: none" name="file" type="text" value="{{ file[0] }}">
+					<input type="submit" value="{{ file[0] }}">
+					<!-- <i class="fas fa-edit rename_file"></i> -->
+					<i class="fas fa-file-download download_file"></i>
+					<i class="fas fa-trash-alt delete_file"></i>
+				</form>
+				<p> Timestamp: {{ file[1] }} </p>
+				<p> Size: {{ file[2] }} {{ file[3] }} </p>
+				<p> URL: {{ url_root }}file/{{ file[0] }} </p>
+			</div>
+		{% endfor %}
+	</div>
+
+	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+	<script src="{{url_for('static', filename='scripts/files.js')}}"></script>
 </body>
